# ecom-env

./: .env  Dockerfile  Dockerfile.api  README.md  app.py  audit_gen.py  baseline.py  demo.py  docker-compose.yml  env.py  eval_error.txt  evaluate.py  generator.py  gitignore  grader.py  inference.py  metrics.json  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_output.txt  run_result.txt  server.py  server___init__.py  tasks.py  test_grader.py
dashboard/: Dockerfile  out.txt  out2.txt  package-lock.json  package.json
dashboard-ui/: package-lock.json  package.json  tailwind.config.js
dashboard-ui/app/: layout.tsx  page.tsx
dashboard-ui/components/: AIActionCard.tsx  MetricsDashboard.tsx
dashboard-ui/styles/: globals.css
dashboard/src/app/: globals.css  page.tsx
server/: app.py
